--- a/app/global/stylesheets/modules.less
+++ b/app/global/stylesheets/modules.less
@@ -57,13 +57,13 @@
   margin-right: auto;
   position: relative;
 
-  > .col-sm-8 {
+  > .col-xs-8 {
     width: 680px
   }
 
-  > .col-sm-4 {
+  > .col-xs-4 {
     width: 300px;
     margin-top: 20px;
-    margin-left: 20px;    
+    margin-left: 20px;
   }
 }
